package com.eventsystem.domain.event;

public enum SalesMethod {
    REGULAR,
    VIRTUAL_QUEUE,
    LOTTERY
}